# gcp-ai-bootcamp

./: .gitignore  README.md  pyproject.toml
alloydb/: vector_search_with_alloydb.md
alloydb-ai/: vector_search_with_alloydb.md
assignments/: bq-remote-models.md
automl/: automl.md
cloudrun/: deploy_vllm_cloudrun.md
convo-agent/: travel_convo_agent.md
data-analytics/bigquery/: bq_large_dataset_us.md
env_setup/terraform/: README.md  main.tf  providers.tf  variables.tf
env_setup/terraform/01-base-infra/: README.md  iam.tf  main.tf  output.tf  providers.tf  terraform.tfvars.sample  (+1 more)
intro-to-genai/: intro_gemini_2_0_flash.ipynb  model_garden_sdxl.ipynb
llm-tuning/: gemma3.ipynb  gemma3_finetuning_on_vertex.ipynb  gemma3_on_vertex.ipynb  llama3_finetuning_on_vertex.ipynb
llm-tuning/archived/: peft_llama2_finetuning.ipynb
llm_tuning/: gemma3_finetuning_on_vertex.ipynb  llama3_finetuning_on_vertex.ipynb  peft_llama2_finetuning.ipynb
vertex-101/: 00_v2_ff_labsetup.ipynb  02_feature_engineering_batch.ipynb  03_feature_engineering_streaming.ipynb  README.md  requirements.txt
vertex-101/vertex_ai_lab/: 04_experimentation.ipynb  05_model_training_torch_formalization.ipynb  05_model_training_xgboost_formalization.ipynb  06_formalization.ipynb  07_resource_cleanup.ipynb  utils.py
vertex_101/: 00_v2_ff_labsetup.ipynb  02_feature_engineering_batch.ipynb  README.md  requirements.txt
vertex_101/scripts/: copy_bigquery_data.py
vertex_101/vertex_ai_lab/: 04_experimentation.ipynb  05_model_training_xgboost_formalization.ipynb  06_formalization.ipynb  utils.py
(+11 files in other folders)
